plugins {
    id 'com.android.application'
}

android {
    compileSdk 33
    flavorDimensions "default"

    defaultConfig {
        applicationId "com.fongmi.android.tv"
        minSdk 16
        targetSdk 28
        multiDexEnabled true
        ndk { abiFilters "armeabi-v7a" }
        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    productFlavors {
        leanback {
            dimension "default"
            versionCode 82
            versionName "20230616#3"
        }
    }

    buildFeatures {
        viewBinding true
    }

    buildTypes {
        release {
            minifyEnabled true
            zipAlignEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    packagingOptions {
        exclude 'META-INF/beans.xml'
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    android.applicationVariants.all { variant ->
        variant.outputs.all { output ->
            outputFileName = "${variant.productFlavors[0].name}.apk"
        }
    }

    lint {
        abortOnError false
        disable 'UnsafeOptInUsageError'
    }
}

dependencies {
    implementation project(':drpy')
    implementation project(':tvbus')
    implementation project(':zlive')
    implementation project(':catvod')
    implementation project(':pyramid')
    implementation project(':forcetech')
    implementation project(':ijkplayer')
    implementation project(':media-lib-database')
    implementation project(':media-lib-datasource')
    implementation project(':media-lib-datasource-okhttp')
    implementation project(':media-lib-datasource-rtmp')
    implementation project(':media-lib-decoder-av1')
    implementation project(':media-lib-decoder-ffmpeg')
    implementation project(':media-lib-exoplayer')
    implementation project(':media-lib-exoplayer-dash')
    implementation project(':media-lib-exoplayer-hls')
    implementation project(':media-lib-exoplayer-rtsp')
    implementation project(':media-lib-exoplayer-smoothstreaming')
    implementation project(':media-lib-extractor')
    implementation project(':media-lib-session')
    implementation project(':media-lib-ui')
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.leanback:leanback:1.2.0-alpha02'
    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
    implementation 'androidx.preference:preference:1.2.0'
    implementation 'androidx.room:room-runtime:2.5.1'
    implementation 'cat.ereza:customactivityoncrash:2.4.0'
    implementation 'com.github.bassaer:materialdesigncolors:1.0.0'
    implementation 'com.github.bumptech.glide:glide:4.15.1'
    implementation 'com.github.bumptech.glide:annotations:4.15.1'
    implementation 'com.github.bumptech.glide:okhttp3-integration:4.15.1'
    implementation('com.github.thegrizzlylabs:sardine-android:0.8') { exclude group: 'com.squareup.okhttp3', module: 'okhttp' }
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'com.google.code.gson:gson:' + gsonVersion
    implementation 'com.google.zxing:core:3.4.1'
    implementation 'com.guolindev.permissionx:permissionx:1.7.1'
    implementation 'com.hierynomus:smbj:0.11.5'
    implementation 'com.squareup.okhttp3:okhttp:' + okhttpVersion
    implementation 'me.jessyan:autosize:1.2.1'
    implementation 'net.java.dev.jna:jna:5.12.1'
    implementation 'org.apache.commons:commons-compress:1.20'
    implementation 'org.greenrobot:eventbus:3.3.1'
    implementation 'org.jsoup:jsoup:' + jsoupVersion
    implementation 'org.nanohttpd:nanohttpd:2.3.1'
    implementation('org.simpleframework:simple-xml:2.7.1') { exclude group: 'stax', module: 'stax-api' exclude group: 'xpp3', module: 'xpp3' }
    annotationProcessor 'androidx.room:room-compiler:2.5.1'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
}